logs/dag_id=mlb_parser/run_id=manual__2023-09-12T06:40:36.885484+00:00/task_id=get_max_hr/attempt=1.log
[2023-09-12T06:40:59.453+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: mlb_parser.get_max_hr manual__2023-09-12T06:40:36.885484+00:00 [queued]>
[2023-09-12T06:40:59.459+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: mlb_parser.get_max_hr manual__2023-09-12T06:40:36.885484+00:00 [queued]>
[2023-09-12T06:40:59.460+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-09-12T06:40:59.467+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): get_max_hr> on 2023-09-12 06:40:36.885484+00:00
[2023-09-12T06:40:59.472+0000] {standard_task_runner.py:57} INFO - Started process 72778 to run task
[2023-09-12T06:40:59.474+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'mlb_parser', 'get_max_hr', 'manual__2023-09-12T06:40:36.885484+00:00', '--job-id', '496', '--raw', '--subdir', 'DAGS_FOLDER/mlb_parser.py', '--cfg-path', '/tmp/tmpk37tuh_0']
[2023-09-12T06:40:59.477+0000] {standard_task_runner.py:85} INFO - Job 496: Subtask get_max_hr
[2023-09-12T06:40:59.508+0000] {task_command.py:415} INFO - Running <TaskInstance: mlb_parser.get_max_hr manual__2023-09-12T06:40:36.885484+00:00 [running]> on host 2e8147b3a465
[2023-09-12T06:40:59.553+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='andy_hsu' AIRFLOW_CTX_DAG_ID='mlb_parser' AIRFLOW_CTX_TASK_ID='get_max_hr' AIRFLOW_CTX_EXECUTION_DATE='2023-09-12T06:40:36.885484+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-12T06:40:36.885484+00:00'
[2023-09-12T06:40:59.555+0000] {sql.py:274} INFO - Executing: 
            SELECT
                "Name",
                float("H") / float("AB") AS "AVG"
                FROM mlb_parser
                WHERE "AB" > (
                    SELECT AVG("AB") FROM mlb_parser
                )
                ORDER BY "AVG" DESC
                LIMIT 10;
            
[2023-09-12T06:40:59.563+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-12T06:40:59.569+0000] {base.py:73} INFO - Using connection ID 'postgres_mlb_parser_DB' for task execution.
[2023-09-12T06:40:59.577+0000] {sql.py:418} INFO - Running statement: 
            SELECT
                "Name",
                float("H") / float("AB") AS "AVG"
                FROM mlb_parser
                WHERE "AB" > (
                    SELECT AVG("AB") FROM mlb_parser
                )
                ORDER BY "AVG" DESC
                LIMIT 10;
            , parameters: None
[2023-09-12T06:40:59.580+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ""H""
LINE 4:                 float("H") / float("AB") AS "AVG"
                              ^

[2023-09-12T06:40:59.589+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=mlb_parser, task_id=get_max_hr, execution_date=20230912T064036, start_date=20230912T064059, end_date=20230912T064059
[2023-09-12T06:40:59.595+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 496 for task get_max_hr (syntax error at or near ""H""
LINE 4:                 float("H") / float("AB") AS "AVG"
                              ^
; 72778)
[2023-09-12T06:40:59.609+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-12T06:40:59.619+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
